# faceid

./: .gitignore  Makefile  README.md  meson.build
config/: faceid.conf
src/: adaptive_auth.cpp  adaptive_auth.h  camera.cpp  camera.h  clahe.cpp  clahe.h  config.cpp  config.h  config_merge.cpp  config_paths.h.in  display.cpp  display.h  display_detector.cpp  display_detector.h  encoding_config.h  face_detector.cpp  face_detector.h  fingerprint_auth.cpp  fingerprint_auth.h  image.h  lid_detector.cpp  lid_detector.h  logger.cpp  logger.h  meson.build  optical_flow.h  systemd_helper.cpp  systemd_helper.h
src/cli/: cli_common.h  cli_helpers.h  cmd_add.cpp  cmd_bench.cpp  cmd_devices.cpp  cmd_help.cpp  cmd_list.cpp  cmd_remove.cpp  cmd_show.cpp  cmd_test.cpp  cmd_test_image.cpp  cmd_use.cpp  commands.h  embedded_test_image.h  faceid_benchmark.cpp  main.cpp
src/detectors/: common.h  detectors.h  retinaface.cpp  retinaface_model_data.h  scrfd.cpp  ultraface.cpp  yolo.cpp  yunet.cpp  yunet_model_data.cpp  yunet_model_data.h
src/libfacedetection/: facedetectcnn-model.cpp  facedetection_export.h
src/models/: binary_model.cpp  binary_model.h  model_cache.cpp  model_cache.h  test_encoding_integrity.cpp
src/pam/: pam_faceid.cpp
src/presence/: daemon.cpp  detector.cpp  detector.h  guard.cpp  presence_daemon.cpp  presence_detector.cpp  presence_detector.h  presence_guard.cpp  presence_guard.h
systemd/: faceid-presence.service  faceid-tmpfiles.conf
test/: benchmark_recognition.cpp  test_display_detection.sh
